# scan-groups-tgbot

./: .gitignore  README.md  pyproject.toml
src/scan_groups_tgbot/: core.py  main.py
